added the models for the jokes and configured for next steps required

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local); Database=mvcJokeShopAssignment2024; Trusted_Connection=True; MultipleActiveResultSet=True; Encrypt=False"
   }
 }
